@@ -1,3 +1,4 @@
 EBUILD cl-printer-meta-11.3-r1.ebuild 508 RMD160 add1c0e16d1d22d583ac1106d3a59dbc69dbb056 SHA1 768c4593a30054654a5fd48257329ac39117fd21 SHA256 c6daf99cae0eb6384f11c5a8bdd5e6dd07d6c5a15a54cd4e753939272772eefc
+EBUILD cl-printer-meta-11.3-r2.ebuild 527 RMD160 34f8ce838a18fa995154e6f9c9d8fcc2c19d9472 SHA1 38de8eb03515b0ed659d264b740a0b5023671d84 SHA256 71d4040795ac610c28529ef0706d798aeaca222a0d77ee7a99fdc5e740065b2e
 EBUILD cl-printer-meta-11.3.ebuild 484 RMD160 7b907e5ea140bc9609e573b2c2e56349bd49ecfa SHA1 925b44968ee27a93e9f0e814af9d9817730739e8 SHA256 fa0a89e788c6ce0ca1fb800a06a13742a9f5fa02750125e8de90bfe7645392ac
-MISC ChangeLog 1746 RMD160 33c78775e49e32cffc05253ae1a0bd9cafacb309 SHA1 055d5b677cf2cfba92ff7ca273819807d471ec22 SHA256 a5fe7972971f7b664a7b35d7f5ad09ec912269a55f06025d88bdd7c53800fef2
+MISC ChangeLog 1911 RMD160 eb12568e1d70c32ef45c8154d77e302fb7d65394 SHA1 de26f06a8f3b6ea75418251c5d3cc0be1c4f91ff SHA256 6f1e20e400c8088b6400f63da74825595364e4ac627eb3b8b05da564c2491283
