@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-printer-meta-11.3-r2 (12 May 2011)
+
+  12 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +cl-printer-meta-11.3-r2.ebuild:
+  Add net-print/foo2zjs
+
 *cl-printer-meta-11.3-r1 (09 May 2011)
 
   09 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
